--- a/.project
+++ b/.project
@@ -15,9 +15,22 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
+		<buildCommand>
+			<name>org.zeroturnaround.eclipse.rebelXmlBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.m2e.core.maven2Nature</nature>
+		<nature>org.zeroturnaround.eclipse.jrebelNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>Output_Bin</name>
+			<type>2</type>
+			<location>/home/lho/git/alfresco-view-repo/target/classes</location>
+		</link>
+	</linkedResources>
 </projectDescription>
